# warehouseify

./: .gitignore  Cargo.toml  README.md  config.toml  signing.key  signing.pub
src/: cli.rs  config.rs  dependencies.rs  main.rs
src/process_crates/: build_sources.rs  download_sources.rs  edit_sources.rs  mod.rs  unpack_sources.rs
