[package]
name = "warehouseify"
version = "0.1.0"
edition = "2024"
authors = ["bitfl0wer <flori@bitfl0wer.de>"]
license = "MPL-2.0"
description = "Create your own `cargo-binstall` repository."

[dependencies]
cargo_toml = "0.22.1"
clap = { version = "4.5.36", features = [
    "derive",
    "error-context",
    "help",
    "std",
    "usage",
], default-features = false }
env_logger = { version = "0.11.8", default-features = false }
log = "0.4.27"
minisign = "0.7.9"
toml = "0.8.20"
ureq = { version = "3.0.11", features = ["platform-verifier"] }
